
May 30, 2007 - chris
o added unittests for util.c
o modified doxygen tags in the documentation (ham/hamsterdb.h)
o fixed a rare memory leak with SMOs during ham_erase 
    (only for in-memory databases)

May 29, 2007 - chris
o added unittests for btree_cursor.c

May 19, 2007 - chris
o configure.in now checks for cppunit/extensions/HelperMacros.h, not
    cppunit/TestSuite.h

May 10, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.2

May 10, 2007 - chris
o refactored the freelist and reimplemented it as a bitmap
o removed HAM_OPTIMIZE_SIZE - this flag is no longer needed, the new bitmap
    structures are automatically optimized

May 5, 2007 - chris
o new unittests for the freelist

Apr 04, 2007 - chris
o refactored the cache and some other modules
o bugfix in ham_open_ex: the cachesize parameter was ignored; ham_open_ex
    always used HAM_DEFAULT_CACHESIZE

Apr 02, 2007 - chris
o started writing unittests and refactoring

Mar 27, 2007 - chris
o database files are now endian-agnostic; hamsterdb can now use big-endian 
    databases on little-endian architectures and vice versa 

Mar 21, 2007 - chris
o removed HAM_OPEN_EXCLUSIVELY - i'll replace it with file locking in a 
    few weeks
o use mmap if the db-pagesize is a multiple of the os-pagesize, and not 
    just if it's equal
o do not store the following flags in the database: HAM_DISABLE_VAR_KEYLEN,
    HAM_CACHE_STRICT, HAM_DISABLE_MMAP, HAM_OPEN_EXCLUSIVELY, 
    HAM_WRITE_THROUGH, HAM_READ_ONLY, HAM_OPTIMIZE_SIZE, 
    HAM_DISABLE_FREELIST_FLUSH
o fixed an unlikely crash in ham_cursor_move: if the cursor was nil after 
    moving the cursor, return an error

Mar 17, 2007 - chris
o added configure-option --enable-internal to enable all internal 
    functions (ham_dump and ham_check_integrity). disabling those functions
    shrinks the library size by a few kilobytes
o improved the documentation in the header-files

Mar 16, 2007 - chris