@@ -1,5 +1,9 @@
                 
-SUBDIRS = src include samples unittests
+SUBDIRS = src include samples
+
+if HAVE_CPPUNIT
+SUBDIRS += unittests
+endif 
 
 EXTRA_DIST = documentation/Doxyfile                     \
              documentation/tutorial.odt                 \
